--- a/src/components/interfaces/Hero.astro
+++ b/src/components/interfaces/Hero.astro
@@ -1,24 +1,32 @@
-<section class="py-32">
-    <div class="relative container mx-auto max-w-screen-sm py-10 text-center">
-        <div
-            class="absolute inset-0 -z-10 h-full w-full bg-[linear-gradient(to_right,hsl(var(--muted))_1px,transparent_1px),linear-gradient(to_bottom,hsl(var(--muted))_1px,transparent_1px)] bg-[size:64px_64px] [mask-image:radial-gradient(ellipse_50%_100%_at_50%_50%,#000_60%,transparent_100%)]"
-        >
-        </div>
+---
+import { NotebookPen } from "lucide-react";
+import { Button } from "../ui/button";
+---
+
+<section class="relative py-12 md:py-32">
+    <div
+        class="absolute bottom-0 left-0 right-0 top-0 bg-[radial-gradient(circle_500px_at_50%_200px,#f54900,transparent)]"
+    >
+    </div>
+
+    <div
+        class="relative container mx-auto max-w-screen-sm py-10 text-center px-2"
+    >
         <h2 class="mb-3 text-4xl lg:text-7xl">
             Altos de Monardez Centro de Eventos en La Serena
         </h2>
-        <p class="mb-5 text-md text-muted-foreground text-pretty md:text-base">
+        <p class="mb-5 text-md text-zinc-200 text-pretty md:text-base">
             ¿Buscas un lugar con estilo, amplitud y naturaleza para celebrar tu
             evento en La Serena? Altos de Monardez es un centro de eventos
             exclusivo ubicado a solo 8 km del centro de La Serena, camino al
             Valle de Elqui. Un espacio diseñado para que tu evento sea más que
             una reunión: una experiencia inolvidable.
         </p>
-        <button
-            data-slot="button"
-            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground shadow-xs hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3"
-            >Marketplace
-        </button>
+        <Button>
+            Contacatos para hacer tu evento
+            <NotebookPen className="h-4 w-4" />
+        </Button>
+
         <div
             class="mt-7 flex items-start justify-center gap-2 font-medium md:text-xl"
         >
@@ -41,31 +49,38 @@
         </div>
     </div>
     <div class="mx-auto mt-14 max-w-screen-xl overflow-hidden py-8">
-        <div class="relative w-full">
-            <img
-                src="/images/hero/Fotos Oficiales-3.jpg"
-                alt="placeholder"
-                class="relative left-1/2 mx-auto max-h-[480px] w-full rounded-xl object-cover shadow-md lg:static lg:max-w-[60vw] xl:max-w-screen-md"
-            />
+        <div class="relative w-full group">
+            <div class="relative">
+                <img
+                    src="/images/hero/Fotos Oficiales-3.jpg"
+                    alt="placeholder"
+                    class="relative left-1/2 mx-auto max-h-[480px] w-full rounded-xl object-cover shadow-md lg:static lg:max-w-[60vw] xl:max-w-screen-md"
+                />
+                <img
+                    src="/images/hero/Fotos Oficiales-3.jpg"
+                    alt="placeholder"
+                    class="absolute mx-auto blur-lg saturate-200 -z-10 inset-0 max-h-[480px] w-full rounded-xl object-cover shadow-md lg:max-w-[60vw] xl:max-w-screen-md"
+                />
+            </div>
             <img
                 src="/images/hero/Fotos Oficiales-251.jpg"
                 alt="placeholder"
-                class="absolute top-0 right-20 -z-10 hidden max-h-60 -rotate-12 rounded-xl object-cover shadow-md rotate-y-180 lg:block"
+                class="absolute top-0 right-20 -z-10 hidden max-h-60 -rotate-12 rounded-xl object-cover shadow-md rotate-y-180 lg:block group-hover:rotate-0 group-hover:right-0 transition-all duration-500"
             />
             <img
                 src="/images/hero/Fotos Oficiales-186.jpg"
                 alt="placeholder"
-                class="absolute right-20 bottom-0 hidden rotate-12 rounded-xl object-cover shadow-md md:max-h-60 lg:block"
+                class="absolute right-20 bottom-0 hidden rotate-12 rounded-xl object-cover shadow-md md:max-h-60 lg:block group-hover:rotate-0 group-hover:-bottom-5 group-hover:right-10 transition-all duration-500"
             />
             <img
                 src="/images/hero/Fotos Oficiales-51.jpg"
                 alt="placeholder"
-                class="absolute top-0 left-1/4 -z-10 max-h-44 -rotate-12 rounded-xl object-cover shadow-md min-[450px]:max-h-52 sm:left-1/3 md:max-h-60 lg:left-20"
+                class="absolute top-0 left-1/4 -z-10 max-h-44 -rotate-12 rounded-xl object-cover shadow-md min-[450px]:max-h-52 sm:left-1/3 md:max-h-60 lg:left-20 group-hover:rotate-0 group-hover:-left-0 transition-all duration-500"
             />
             <img
                 src="/images/hero/Fotos Oficiales-175.jpg"
                 alt="placeholder"
-                class="absolute bottom-0 left-1/4 max-h-44 rotate-12 rounded-xl object-cover shadow-md min-[450px]:max-h-52 sm:left-1/3 md:max-h-60 lg:left-20"
+                class="absolute bottom-0 left-1/4 max-h-44 rotate-12 rounded-xl object-cover shadow-md min-[450px]:max-h-52 sm:left-1/3 md:max-h-60 lg:left-20 group-hover:rotate-0 group-hover:left-10 group-hover:-bottom-5 transition-all duration-500"
             />
         </div>
     </div>
