--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,11 +13,13 @@ import "@/styles/global.css";
         <meta name="generator" content={Astro.generator} />
         <title>Altos de Monardez - Centro de Eventos en La Serena</title>
     </head>
-    <body>
+    <body class="relative -z-30">
         <Header />
-        <main class="relative antialiased">
+        <main
+            class="relative -z-20 bgz antialiased bg-gradient-to-tr from-zinc-800 via-slate-800 to-gray-800 text-white"
+        >
             <div
-                class="absolute -z-20 h-full w-full bg-[radial-gradient(#e5e7eb_1px,transparent_1px)] [background-size:16px_16px] [mask-image:radial-gradient(ellipse_50%_50%_at_50%_50%,#000_70%,transparent_100%)]"
+                class="absolute -z-10 h-full w-full bg-[radial-gradient(#3f3f46_1px,transparent_1px)] [background-size:16px_16px] [mask-image:radial-gradient(ellipse_50%_50%_at_50%_50%,#000_70%,transparent_100%)]"
             >
             </div>
             <slot />
