feat: integrar componentes Subhero y Service en la página principal, eliminando secciones comentadas

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,12 @@
 ---
 import Hero from "@/components/interfaces/Hero.astro";
 import Layout from "../layouts/Layout.astro";
+import Subhero from "@/components/interfaces/Subhero.astro";
+import Service from "@/components/interfaces/Service.astro";
 ---
 
 <Layout>
     <Hero />
-    <!-- <Offer />
-    <WhyUs />
+    <Subhero />
     <Service />
-    <Mision /> -->
 </Layout>
