--- a/src/components/interfaces/Hero.astro
+++ b/src/components/interfaces/Hero.astro
@@ -5,7 +5,7 @@ import { Button } from "../ui/button";
 
 <section class="relative py-12 md:py-32">
     <div
-        class="absolute bottom-0 left-0 right-0 top-0 bg-[radial-gradient(circle_500px_at_50%_200px,#f54900,transparent)]"
+        class="absolute bottom-0 left-0 right-0 top-0 bg-[radial-gradient(circle_400px_at_50%_200px,#f54900,transparent)] opacity-40"
     >
     </div>
 
