--- a/src/components/interfaces/Service.astro
+++ b/src/components/interfaces/Service.astro
@@ -4,7 +4,7 @@ import { Car, Croissant, VideoIcon, Volume2 } from "lucide-react";
 
 <section class="relative overflow-hidden py-24 md:py-32">
     <div
-        class="absolute bottom-auto -z-10 left-auto right-0 top-0 h-[500px] w-[500px] -translate-x-[60%] translate-y-[25%] rounded-full bg-[rgb(235,103,63)] opacity-50 blur-[80px]"
+        class="absolute bottom-auto -z-10 left-auto right-0 top-0 h-[400px] w-[400px] -translate-x-[90%] translate-y-[40%] rounded-full bg-[rgb(235,103,63)] opacity-50 blur-[80px]"
     >
     </div>
     <div class="container mx-auto px-2">
@@ -122,7 +122,7 @@ import { Car, Croissant, VideoIcon, Volume2 } from "lucide-react";
 </section>
 <section class="relative overflow-hidden py-24 md:py-32">
     <div
-        class="absolute bottom-auto -z-10 left-auto right-0 top-0 h-[500px] w-[500px] -translate-x-[60%] translate-y-[25%] rounded-full bg-[rgb(235,103,63)] opacity-50 blur-[80px]"
+        class="absolute bottom-auto -z-10 right-auto left-0 top-0 h-[400px] w-[400px] translate-x-[80%] translate-y-[40%] rounded-full bg-[rgb(235,103,63)] opacity-50 blur-[80px]"
     >
     </div>
     <div class="container mx-auto px-2">
