--- a/src/components/interfaces/Subhero.astro
+++ b/src/components/interfaces/Subhero.astro
@@ -19,7 +19,7 @@ import { Button } from "../ui/button";
                     sonido, iluminación y multimedia.
                 </p>
                 <div
-                    class="flex w-full flex-col justify-center gap-2 sm:flex-row lg:justify-start"
+                    class="relative z-10 flex w-full flex-col justify-center gap-2 sm:flex-row lg:justify-start"
                 >
                     <Button>
                         Contáctanos para hacer tu evento
@@ -28,7 +28,7 @@ import { Button } from "../ui/button";
                 </div>
             </div>
             <div
-                class="relative mt-16 -mb-16 flex justify-center gap-4 lg:mt-0 lg:mb-0 lg:justify-end"
+                class="relative mt-16 -mb-16 flex flex-col justify-center gap-4 md:flex-row lg:mt-0 lg:mb-0 lg:justify-end"
             >
                 <div
                     class="absolute -inset-20 z-0 rounded-2xl bg-gradient-to-r from-amber-100 via-red-200 to-teal-100 opacity-70 blur-3xl md:inset-5"
@@ -38,14 +38,12 @@ import { Button } from "../ui/button";
                     <img
                         src="/images/hero/Fotos Oficiales-175.jpg"
                         alt="placeholder hero"
-                        class="h-[400px] rounded-lg border border-border object-cover object-center sm:max-w-[420px]"
+                        class="h-[400px] w-full rounded-lg border border-border object-cover object-center md:max-w-[420px]"
                     />
                 </div>
-                <div
-                    class="relative z-10 hidden flex-col gap-4 sm:flex md:hidden 2xl:flex"
-                >
+                <div class="relative z-10 flex flex-col gap-4 sm:flex 2xl:flex">
                     <div
-                        class="w-[256px] flex-1 p-3 overflow-clip rounded-lg border border-border bg-background"
+                        class="md:w-[256px] flex-1 p-3 overflow-clip rounded-lg border border-border bg-background"
                     >
                         <h3 class="text-black font-bold text-lg text-center">
                             Tu matrimonio, a tu estilo
@@ -71,7 +69,7 @@ import { Button } from "../ui/button";
                         </p>
                     </div>
                     <div
-                        class="aspect-[2/1] w-[256px] overflow-clip rounded-lg border border-border bg-background"
+                        class="aspect-[2/1] md:w-[256px] overflow-clip rounded-lg border border-border bg-background"
                     >
                         <p
                             class="p-4 text-md font-semibold text-pretty text-center text-zinc-700 italic"
