Fix: Cambios en la UI para mejorar la Visibilidad del texto

--- a/src/components/interfaces/Hero.astro
+++ b/src/components/interfaces/Hero.astro
@@ -12,10 +12,10 @@ import { Button } from "../ui/button";
     <div
         class="relative container mx-auto max-w-screen-sm py-10 text-center px-2"
     >
-        <h2 class="mb-3 text-4xl lg:text-7xl">
+        <h2 class="mb-3 font-semibold text-4xl lg:text-7xl">
             Altos de Monardez Centro de Eventos en La Serena
         </h2>
-        <p class="mb-5 text-md text-zinc-200 text-pretty md:text-base">
+        <p class="mb-5 text-lg text-zinc-200 text-pretty md:text-base">
             ¿Buscas un lugar con estilo, amplitud y naturaleza para celebrar tu
             evento en La Serena? Altos de Monardez es un centro de eventos
             exclusivo ubicado a solo 8 km del centro de La Serena, camino al
