--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,7 @@ import "@/styles/global.css";
     <body class="relative -z-30">
         <Header />
         <main
-            class="relative -z-20 bgz antialiased bg-gradient-to-tr from-zinc-800 via-slate-800 to-gray-800 text-white"
+            class="relative -z-20 bgz antialiased bg-gradient-to-tr from-zinc-900 via-zinc-800 to-gray-800 text-white"
         >
             <div
                 class="absolute -z-10 h-full w-full bg-[radial-gradient(#3f3f46_1px,transparent_1px)] [background-size:16px_16px] [mask-image:radial-gradient(ellipse_50%_50%_at_50%_50%,#000_70%,transparent_100%)]"
