--- a/src/components/interfaces/Testimonial.astro
+++ b/src/components/interfaces/Testimonial.astro
@@ -1,6 +1,6 @@
 ---
 import { Star } from "lucide-react";
-import { Avatar, AvatarFallback, AvatarImage } from "../ui/avatar";
+import { Avatar } from "../ui/avatar";
 import { Card, CardContent, CardFooter } from "../ui/card";
 ---
 
