--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from "@/components/interfaces/Footer.astro";
 import Header from "@/components/interfaces/Header.astro";
 
 import "@/styles/global.css";
@@ -24,6 +25,7 @@ import "@/styles/global.css";
             </div>
             <slot />
         </main>
+        <Footer />
     </body>
 </html>
 
