--- a/src/components/interfaces/Hero.astro
+++ b/src/components/interfaces/Hero.astro
@@ -3,7 +3,7 @@ import { NotebookPen } from "lucide-react";
 import { Button } from "../ui/button";
 import { Image } from "astro:assets";
 
-import ImageHero from "@/assets/images/hero/Fotos Oficiales-3.avif";
+import ImageHero from "@/assets/images/hero/PORTADA PRINCIPAL.avif";
 import ImageHero2 from "@/assets/images/hero/Fotos Oficiales-251.avif";
 import ImageHero3 from "@/assets/images/hero/Fotos Oficiales-186.avif";
 import ImageHero4 from "@/assets/images/hero/Fotos Oficiales-51.avif";
@@ -17,12 +17,12 @@ import ImageHero5 from "@/assets/images/hero/Fotos Oficiales-175.avif";
     </div>
 
     <div
-        class="relative container mx-auto max-w-screen-sm py-10 text-center px-2"
+        class="relative container mx-auto max-w-screen-sm pt-10 pb-2 text-center px-2 md:py-10"
     >
         <h2 class="mb-3 font-semibold text-4xl lg:text-7xl">
             Altos de Monardez Centro de Eventos en La Serena
         </h2>
-        <p class="mb-5 text-lg text-zinc-200 text-pretty md:text-base">
+        <p class="mb-5 text-sm text-zinc-200 text-pretty md:text-base">
             ¿Buscas un lugar con estilo, amplitud y naturaleza para celebrar tu
             evento en La Serena? Altos de Monardez es un centro de eventos
             exclusivo ubicado a solo 8 km del centro de La Serena, camino al
@@ -33,40 +33,19 @@ import ImageHero5 from "@/assets/images/hero/Fotos Oficiales-175.avif";
             Contacatos para hacer tu evento
             <NotebookPen className="h-4 w-4" />
         </Button>
-
-        <div
-            class="mt-7 flex items-start justify-center gap-2 font-medium md:text-xl"
-        >
-            <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                class="lucide lucide-globe mt-0.5 h-auto w-5"
-                ><circle cx="12" cy="12" r="10"></circle><path
-                    d="M12 2a14.5 14.5 0 0 0 0 20 14.5 14.5 0 0 0 0-20"
-                ></path><path d="M2 12h20"></path></svg
-            >
-            Global Partnerships and Innovation
-        </div>
     </div>
-    <div class="mx-auto mt-14 max-w-screen-xl overflow-hidden py-12">
+    <div class="mx-auto max-w-screen-xl overflow-hidden py-24 md:mt-14">
         <div class="relative w-full group">
             <div class="relative">
                 <Image
                     src={ImageHero}
                     alt="placeholder"
-                    class="relative left-1/2 mx-auto max-h-[480px] w-full rounded-xl object-cover shadow-md lg:static lg:max-w-[60vw] xl:max-w-screen-md"
+                    class="relative left-1/3 mx-auto max-h-[480px] w-full rounded-xl object-cover shadow-md lg:static lg:max-w-[60vw] xl:max-w-screen-md"
                 />
                 <Image
                     src={ImageHero}
                     alt="placeholder"
-                    class="absolute mx-auto left-1/2 blur-xl saturate-200 -z-10 inset-0 max-h-[480px] w-full rounded-xl object-cover shadow-md lg:left-0 lg:max-w-[60vw] xl:max-w-screen-md"
+                    class="absolute mx-auto left-1/3 blur-xl saturate-200 -z-10 inset-0 max-h-[480px] w-full rounded-xl object-cover shadow-md lg:left-0 lg:max-w-[60vw] xl:max-w-screen-md"
                 />
             </div>
             <Image
@@ -82,12 +61,12 @@ import ImageHero5 from "@/assets/images/hero/Fotos Oficiales-175.avif";
             <Image
                 src={ImageHero4}
                 alt="placeholder"
-                class="absolute top-0 left-1/4 -z-10 max-h-44 -rotate-12 rounded-xl object-cover shadow-md min-[450px]:max-h-52 sm:left-1/3 md:max-h-60 lg:left-20 group-hover:rotate-0 group-hover:-left-0 transition-all duration-500 ease-in-out"
+                class="absolute -top-16 left-[20%] -z-10 max-h-44 rotate-12 rounded-xl object-cover shadow-md min-[450px]:max-h-52 sm:left-1/3 md:top-0 md:max-h-60 lg:left-20 group-hover:rotate-0 group-hover:-left-0 transition-all duration-500 ease-in-out"
             />
             <Image
                 src={ImageHero5}
                 alt="placeholder"
-                class="absolute bottom-0 left-1/4 max-h-44 rotate-12 rounded-xl object-cover shadow-md min-[450px]:max-h-52 sm:left-1/3 md:max-h-60 lg:left-20 group-hover:rotate-0 group-hover:left-10 group-hover:-bottom-5 transition-all duration-500 ease-in-out"
+                class="absolute -bottom-20 left-[45%] max-h-44 -rotate-12 rounded-xl object-cover shadow-md min-[450px]:max-h-52 sm:left-1/3 md:bottom-0 md:max-h-60 lg:left-20 group-hover:rotate-0 group-hover:left-10 group-hover:-bottom-5 transition-all duration-500 ease-in-out"
             />
         </div>
     </div>
