Feat: Se cambió el estado del componente Service de 'client:idle' a 'client:load' para mejorar la carga de contenido

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import Contact from "@/components/interfaces/Contact.astro";
 <Layout>
     <Hero />
     <Subhero />
-    <Service client:idle />
+    <Service client:load />
     <Gallery />
     <Testimonial />
     <Contact />
