Feat: Se actualizó la imagen de fondo en el componente de contacto para mejorar la presentación visual

--- a/src/components/interfaces/Contact.astro
+++ b/src/components/interfaces/Contact.astro
@@ -41,7 +41,7 @@ import ContactFormFields from "../contact-form-fields";
                 </div>
             </div>
             <div
-                class="relative mx-auto flex max-w-screen-md w-full flex-col rounded-lg border p-10 bg-[url(/images/contact/image.png)] bg-cover bg-center after:bg-cover after:bg-center after:w-full after:h-full after:content-[''] after:inset-0 after:absolute after:bg-[url(/images/contact/image.png)] after:blur-2xl after:saturate-100 after:-z-10"
+                class="relative mx-auto flex max-w-screen-md w-full flex-col rounded-lg border p-10 bg-[url(/images/contact/image.avif)] bg-cover bg-center after:bg-cover after:bg-center after:w-full after:h-full after:content-[''] after:inset-0 after:absolute after:bg-[url(/images/contact/image.avif)] after:blur-2xl after:saturate-100 after:-z-10"
             >
                 <ContactFormFields client:idle />
             </div>
