Feat: Se cambió la sección a un pie de página y se actualizó el logo para mejorar la presentación visual

--- a/src/components/interfaces/Footer.astro
+++ b/src/components/interfaces/Footer.astro
@@ -1,4 +1,4 @@
-<section class="py-32">
+<footer class="py-12">
     <div class="container mx-auto">
         <div
             class="flex w-full flex-col items-center justify-between gap-10 text-center lg:flex-row lg:items-start lg:text-left"
@@ -7,15 +7,14 @@
                 class="flex w-full flex-col items-center justify-between gap-6 lg:items-start"
             >
                 <div class="flex items-center gap-2 lg:justify-start">
-                    <a href="https://shadcnblocks.com">
+                    <a href="/">
                         <img
-                            src="/images/block/logos/shadcnblockscom-icon.svg"
-                            alt="logo"
-                            title="Shadcnblocks.com"
-                            class="h-8"
+                            src="/black-hires.avif"
+                            alt="Logo de Altos de Monardez"
+                            title="Logo de Altos de Monardez"
+                            class=""
                         />
                     </a>
-                    <h2 class="text-xl font-semibold">Shadcnblocks.com</h2>
                 </div>
                 <p class="text-sm text-muted-foreground">
                     A collection of 100+ responsive HTML templates for your
@@ -148,4 +147,4 @@
             </ul>
         </div>
     </div>
-</section>
+</footer>
