--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import Service from "@/components/interfaces/Service";
 import Gallery from "@/components/interfaces/Gallery.astro";
 import Testimonial from "@/components/interfaces/Testimonial.astro";
 import Contact from "@/components/interfaces/Contact.astro";
+import Map from "@/components/interfaces/Map.astro";
 ---
 
 <Layout>
@@ -15,4 +16,5 @@ import Contact from "@/components/interfaces/Contact.astro";
     <Gallery />
     <Testimonial />
     <Contact />
+    <Map />
 </Layout>
