Feat: Se añadió estilo al botón "Contacta con Nosotros" para mejorar la apariencia visual

--- a/src/components/interfaces/Gallery.astro
+++ b/src/components/interfaces/Gallery.astro
@@ -35,7 +35,9 @@ import { Button } from "../ui/button";
                 <div
                     class="flex w-full flex-col justify-center gap-2 sm:flex-row lg:justify-start"
                 >
-                    <Button>
+                    <Button
+                        className="bg-amber-600 hover:bg-amber-700 text-white font-medium rounded-md transition-colors duration-300"
+                    >
                         Contacta con Nosotros
                         <MessageCircleHeart className="ml-2 size-5" />
                     </Button>
