Feat: Se añadió estilo al botón de contacto para mejorar la apariencia visual

--- a/src/components/interfaces/Hero.astro
+++ b/src/components/interfaces/Hero.astro
@@ -29,7 +29,9 @@ import ImageHero5 from "@/assets/images/hero/Fotos Oficiales-175.avif";
             Valle de Elqui. Un espacio diseñado para que tu evento sea más que
             una reunión: una experiencia inolvidable.
         </p>
-        <Button>
+        <Button
+            className="bg-amber-600 hover:bg-amber-700 text-white font-medium rounded-md transition-colors duration-300"
+        >
             Contacatos para hacer tu evento
             <NotebookPen className="h-4 w-4" />
         </Button>
