--- a/src/components/interfaces/Subhero.astro
+++ b/src/components/interfaces/Subhero.astro
@@ -24,7 +24,7 @@ import { Image } from "astro:assets";
                 <div
                     class="relative z-10 flex w-full flex-col justify-center gap-2 sm:flex-row lg:justify-start"
                 >
-                    <Button>
+                    <Button variant="secondary">
                         Contáctanos para hacer tu evento
                         <MessageCircle className="h-4 w-4" />
                     </Button>
@@ -64,7 +64,7 @@ import { Image } from "astro:assets";
                         <p class="text-center">
                             <a
                                 href="/matrimonio"
-                                class="mt-4 inline-flex items-center justify-center gap-2 rounded-md bg-primary px-4 py-2 text-sm font-medium text-primary-foreground shadow-xs transition-all hover:bg-primary/90 focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive"
+                                class="mt-4 inline-flex items-center justify-center gap-2 px-4 py-2 text-sm font-medium shadow-xs transition-all focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-amber-600 hover:bg-amber-700 text-white rounded-md duration-300"
                             >
                                 Consultas y reservas
                                 <MessageCircle className="h-4 w-4" />
