Feat: Se actualizó la sección de contacto con información de teléfono y correo electrónico

--- a/src/components/interfaces/Contact.astro
+++ b/src/components/interfaces/Contact.astro
@@ -2,7 +2,7 @@
 import ContactFormFields from "../contact-form-fields";
 ---
 
-<section class="py-32">
+<section id="Contacto" class="py-32">
     <div class="container mx-auto px-2">
         <div
             class="mx-auto flex max-w-screen-xl flex-col justify-between gap-10 lg:flex-row lg:gap-20"
@@ -25,16 +25,24 @@ import ContactFormFields from "../contact-form-fields";
                     </h3>
                     <ul class="ml-4 list-disc">
                         <li>
-                            <span class="font-bold">WhatsApp: </span>(123)
-                            34567890
+                            <span class="font-bold">Teléfono: </span>
+                            <a
+                                href="tel:56969175107"
+                                target="_blank"
+                                class="underline"
+                            >
+                                (+56) 9 6917 5107
+                            </a>
                         </li>
                         <li>
                             <span class="font-bold">Email: </span>
                             <a
-                                href="mailto:your-email@example.com"
+                                href="mailto:info@altosdemonardez.cl"
+                                target="_blank"
+                                rel="noopener noreferrer"
                                 class="underline"
                             >
-                                your-email@example.com
+                                info@altosdemonardez.cl
                             </a>
                         </li>
                     </ul>
